# Copyright (c) 2020-2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("ActsKernelTest") {
  deps = [
    "futex_posix:ActsFutexApiTest",
    "io_posix:ActsIoApiTest",
    "ipc_posix:ActsKernelIPCTest",
    "kernelcmsis_hal:ActsCMSISTest",
    "math_posix:ActsMathApiTest",
    "mem_posix:ActsMemApiTest",
    # "net_posix:ActsNetTest",  # support qemu_mini_system_demo
    "process_posix:ActsProcessApiTest",
    "sched_posix:ActsSchedApiTest",
    "sys_posix:ActsSysApiTest",
    "time_posix:ActsTimeApiTest",
    "utils:libutils",
    "utils:libmt_utils",
    "utils:libfs"
  ]
  deps += ["//base/startup/init/interfaces/innerkits:libbegetutil"]
}
